# demandasrr

./: .gitignore  README.md  README_DEPLOY_VM.md  docker-compose.yml  reproduce_issue.py
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260513_0001_initial_schema.py  20260513_0002_refresh_token.py  20260513_0003_pessoa_data_nascimento.py  20260513_0004_municipios_e_areas.py  20260513_0005_solicitacao_evento.py  20260513_0006_solicitacao_anexo.py  20260513_0007_refator_perfil_usuario.py  20260514_0008_hierarquia_perfis.py  20260514_0009_audit_log.py  20260514_0010_solicitacao_titulo.py  20260514_0011_pode_criar_solicitacoes.py  20260514_0012_ver_status_solicitacao.py  20260515_0013_evento_anexos.py  20260515_0014_pode_reabrir_solicitacoes.py  20260516_0015_pessoa_data_nascimento_nullable.py
backend/app/: main.py
backend/app/core/: client_ip.py  config.py  cpf.py  cpf_privacy.py  deps.py  errors.py  file_validation.py  logging.py  password_default.py  rate_limit.py  request_guard.py  security.py  storage.py  titulo.py
backend/app/db/: base.py  base_all.py  seed.py  session.py
backend/app/models/: __init__.py  audit_log.py  enums.py  municipio.py  pessoa.py  refresh_token.py  solicitacao.py  solicitacao_anexo.py  (+2 more)
backend/tests/: test_auth_endpoints.py  test_client_ip.py  test_cpf.py  test_health.py  test_models_metadata.py  test_password_hashing.py  test_pessoa_schema.py  test_security_tokens.py  test_solicitacao_schema.py  test_solicitacao_transitions.py  test_usuario_schemas.py
(+109 files in other folders)
